--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3 jumbotron">
+				<div class="d-flex justify-content-center bg-light p-5 rounded-lg">
 					<div class="text-center">
 						<h1>{% block header_text %}{% endblock %}</h1>
 						<form method="POST" action="{% block form_action %}{% endblock %}">
@@ -25,7 +25,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
+				<div class="d-flex justify-content-center text-center">
 					{% block table %}
 					{% endblock %}
 				</div>
