--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -36,5 +36,14 @@
 				</div>
 			</div>
 		</div>
+		<script src="/static/jquery-3.6.0.js"></script>
+		<script src="/static/list.js"></script>
+
+		<script>
+			$(document).ready(function () {
+				window.Superlists.initialize();	
+			});
+		</script>
+
 	</body>
 </html>
